--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     
     <nav>
-        <form action="" class="input-container" placeholder="Search ...">
-            <input type="text" class="input">
+        <form class="input-container">
+            <input type="text" class="input" placeholder="Search ...">
+            <i class="fa-solid fa-magnifying-glass magnifier"></i>
         </form>
     </nav>
 
