--- a/index.html
+++ b/index.html
@@ -14,8 +14,33 @@
             <input type="text" class="input" placeholder="Search ...">
             <i class="fa-solid fa-magnifying-glass magnifier"></i>
         </form>
+        
+    <ul>
+        <li>Breakfast</li>
+        <li>Lunch</li>
+        <li>Dinner</li>
+    </ul>
+
     </nav>
 
+    <main>
+        <div class="container">
+            <div class="img"></div>
+
+            <div class="content-container">
+                <h1 class="title">Food Name</h1>
+                <p class="info">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Deserunt voluptatibus provident alias nemo, 
+                    odit vero repellat corrupti explicabo possimus vitae harum 
+                    ullam aliquam cupiditate cumque obcaecati! Ipsa cum ad voluptatum.
+                </p>
+                <button>$20 - Order Now</button>
+            </div>
+        </div>
+    </main>
+
+    <section class="ingredients"></section>
 
     <script src="./app.js"></script>
 </body>
